Make unit tests generate tests/*_data/* data files themselves
Several tests (e.g., AlignmentFile_test.py) have long been able to run
`make -C data/pysam_data` etc themselves when they are run via unittest.
Convert this code to a `setUpModule()` hook so that both unittest and
pytest will execute it before running test cases.

Add all.stamp touch targets to the three makefiles, and only run make
automatically if it doesn't already exist. Hence the tests will generate
data files in a clean directory but it is simple to prevent them from
altering the data files if that is desired.

Add a third makefile for the tests/tabix_data subdirectory.
TODO: Remove tabix_data files that can be generated and add rules
for them instead.

--- a/tests/cbcf_data/Makefile
+++ b/tests/cbcf_data/Makefile
@@ -4,7 +4,10 @@ VCF=$(filter-out example_empty.vcf,$(ALL_VCF))
 VCFGZ=$(VCF:%.vcf=%.vcf.gz)
 BCF=$(VCF:%.vcf=%.bcf)
 
-all: $(VCFGZ) $(BCF)
+all: all.stamp
+
+all.stamp: $(VCFGZ) $(BCF)
+	touch $@
 
 %.vcf.gz: %.vcf
 	bgzip < $< > $@
@@ -19,5 +22,4 @@ example_empty.bcf: example_empty.vcf.gz
 	touch $@
 
 clean:
-	rm -f *.gz *.tbi *.csi *.bcf
-
+	-rm -f all.stamp *.gz *.tbi *.csi *.bcf
