List doc/* contents more precisely in MANIFEST.in
In particular, omit any .DS_Store files.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -57,4 +57,5 @@ include cy_build.py
 include requirements.txt
 
 # documentation
-include doc/*
+include doc/*.py doc/*.rst
+include doc/Makefile doc/make.bat
