--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,8 @@ jobs:
           python -m pip install --upgrade pip        
           pip install cython pytest pytest-pep8
 
-      - name: Build wheels
+      - name: Install build prerequisites
+        if:   runner.os == 'Linux'
         uses: pypa/cibuildwheel@v2.1.2
         env:
           CIBW_BUILD: cp36-* cp37-* cp38-*
@@ -32,6 +33,23 @@ jobs:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
           CIBW_MANYLINUX_I686_IMAGE: manylinux1
 
+      - name: Install build prerequisites
+        if:   runner.os == 'Linux'
+        uses: pypa/cibuildwheel@v2.1.2
+        env:
+          CIBW_BUILD: cp36-* cp37-* cp38-*
+          CIBW_BEFORE_BUILD: yum install -y libcurl-devel zlib-devel bzip2-devel xz-devel && pip install cython
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
+          CIBW_MANYLINUX_I686_IMAGE: manylinux1
+          
+      - name: Build wheels
+        if:   runner.os != 'Linux'
+        uses: pypa/cibuildwheel@v2.1.2
+        env:
+          CIBW_BUILD: cp36-* cp37-* cp38-*
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
+          CIBW_MANYLINUX_I686_IMAGE: manylinux1
+          
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
