--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04]  # , macos-10.15]  # windows-2019, 
+        os: [ubuntu-20.04, macos-10.15]  # windows-2019, 
         
     steps:
       - name: Checkout pysam
@@ -38,8 +38,6 @@ jobs:
         uses: pypa/cibuildwheel@v2.1.2
         env:
           CIBW_BUILD: cp36-* cp37-* cp38-*
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
-          CIBW_MANYLINUX_I686_IMAGE: manylinux1
           
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
