--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,7 +28,7 @@ jobs:
         if:   runner.os == 'Linux'
         uses: pypa/cibuildwheel@v2.1.2
         env:
-          CIBW_BUILD: cp36-* cp37-* cp38-*
+          CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
           CIBW_BEFORE_BUILD: yum install -y libcurl-devel zlib-devel bzip2-devel xz-devel && pip install cython
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
           CIBW_MANYLINUX_I686_IMAGE: manylinux1
@@ -37,7 +37,7 @@ jobs:
         if:   runner.os != 'Linux'
         uses: pypa/cibuildwheel@v2.1.2
         env:
-          CIBW_BUILD: cp36-* cp37-* cp38-*
+          CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
           CIBW_BEFORE_BUILD: pip install cython
 
       - name: Upload artifacts
@@ -73,25 +73,33 @@ jobs:
 
       - name: Create source distribution
         run:  python setup.py sdist
-    
+
       - uses: actions/upload-artifact@v2
         with:
           path: dist/*.tar.gz
 
-    
-    # - name: Publish distribution to Test PyPI
-    #   uses: pypa/gh-action-pypi-publish@master
-    #   with:
-    #     password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-    #     repository_url: https://test.pypi.org/legacy/
+  upload_pypi:
 
-    # - name: Publish distribution to PyPI
-    #   if: startsWith(github.ref, 'refs/tags')
-    #   uses: pypa/gh-action-pypi-publish@master
-    #   with:
-    #     password: ${{ secrets.PYPI_API_TOKEN }}
-        
-    # - name:
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     path: ./dist/*.whl 
+    needs: [build_wheels, build_sdist]
+    runs_on: ubuntu-latest
+
+    steps:
+      - name: Get Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: dist
+
+      - name: Publish distribution to Test PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
+
+      # - name: Publish distribution to PyPI
+      #   if: startsWith(github.ref, 'refs/tags')
+      #   uses: pypa/gh-action-pypi-publish@master
+      #   with:
+      #     password: ${{ secrets.PYPI_API_TOKEN }}
+
