add test-pypi upload,2

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -81,7 +81,7 @@ jobs:
   upload_pypi:
 
     needs: [build_wheels, build_sdist]
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Get Artifacts
