Remove generated files in tests/tabix_data
Remove *.tbi files that can be regenerated with tabix and *.gz files
that can be regenerated with bgzip, and add them as targets to the
Makefile instead.

Leave example_0v* as is, as they intentionally test index files
generated by old versions of tabix. Leave some *.gz files as is,
as they are not reproduced exactly by current bgzip.

Leave example.gtf.gz.tbi as is, as we need to ensure it was generated
with HTSlib 1.13 or later (cf c8ab144d263d) and in particular CI hosts
may provide an earlier version.

--- a/tests/tabix_data/Makefile
+++ b/tests/tabix_data/Makefile
@@ -1,6 +1,21 @@
 all: all.stamp
 
 DERIVED_FILES = \
+	empty.bed.gz.tbi \
+	example.bed.gz example.bed.gz.tbi \
+	example.gff2.gz.tbi \
+	example.gff3.gz.tbi \
+	example.sam.gz.tbi \
+	example.vcf.gz.tbi \
+	example_badcomments.bed.gz.tbi \
+	example_badcomments.gtf.gz.tbi \
+	example_badcomments.sam.gz.tbi \
+	example_badcomments.vcf.gz.tbi \
+	example_comments.bed.gz.tbi \
+	example_comments.gtf.gz.tbi \
+	example_comments.sam.gz.tbi \
+	example_comments.vcf.gz.tbi \
+	example_large.bed.gz.tbi \
 	fivecolumns.bed.gz fivecolumns.bed.gz.tbi
 
 all.stamp: $(DERIVED_FILES)
@@ -8,6 +23,15 @@ all.stamp: $(DERIVED_FILES)
 
 %.gz: %
 	bgzip -c $< > $@
+
+%.gff2.gz.tbi: %.gff2.gz
+	tabix -p gff $<
+
+%.gff3.gz.tbi: %.gff3.gz
+	tabix -p gff $<
+
+%.gtf.gz.tbi: %.gtf.gz
+	tabix -p gff $<
 
 %.gz.tbi: %.gz
 	tabix -p $(subst .,,$(suffix $*)) $<
