--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,9 +18,9 @@ jobs:
       matrix:
         os: [ubuntu-20.04, macos-10.15]  # windows-2019,
         cibw_archs: ["auto"]
-        include:
-          - os: ubuntu-20.04
-            cibw_archs: "aarch64"
+        # include:
+        #   - os: ubuntu-20.04
+        #     cibw_archs: "aarch64"
 
     steps:
       - name: Checkout pysam
