--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-10.15]  # windows-2019,
+        os: [ubuntu-20.04] # , macos-10.15]  # windows-2019,
         # cibw_archs: ["auto"]
         # include:
         #   - os: ubuntu-20.04
