--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest] # , macos-10.15]  # windows-2019,
+        os: [ubuntu-latest, macos-10.15]  # windows-2019,
         # cibw_archs: ["auto"]
         # include:
         #   - os: ubuntu-20.04
@@ -41,8 +41,7 @@ jobs:
         uses: pypa/cibuildwheel@v2.2.2
         env:
           CIBW_BUILD: cp36-* cp37-* cp38-* cp39-* cp310-*
-          CIBW_BEFORE_BUILD: yum install -y libcurl-devel zlib-devel bzip2-devel xz-devel
-          # && pip install cython
+          CIBW_BEFORE_BUILD: yum install -y libcurl-devel zlib-devel bzip2-devel xz-devel && pip install cython
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2010
           CIBW_MANYLINUX_I686_IMAGE: manylinux2010
           # CIBW_ARCHS: ${{ matrix.cibw_archs }}
