--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,10 +17,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-10.15]  # windows-2019,
-        # cibw_archs: ["auto"]
-        # include:
-        #   - os: ubuntu-20.04
-        #     cibw_archs: "aarch64"
+        cibw_archs: ["auto"]
+        include:
+          - os: ubuntu-20.04
+            cibw_archs: ["auto", "aarch64"]
 
     steps:
       - name: Checkout pysam
@@ -37,22 +37,32 @@ jobs:
           pip install cython pytest pytest-pep8
 
       - name: Build wheels for linux
-        if:   runner.os == 'Linux'
+        if:   runner.os == 'Linux' && matrix.cibw_archs != 'aarch64'
         uses: pypa/cibuildwheel@v2.2.2
         env:
           CIBW_BUILD: cp36-* cp37-* cp38-* cp39-* cp310-*
           CIBW_BEFORE_BUILD: yum install -y libcurl-devel zlib-devel bzip2-devel xz-devel && pip install cython
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2010
-          CIBW_MANYLINUX_I686_IMAGE: manylinux2010
-          # CIBW_ARCHS: ${{ matrix.cibw_archs }}
+          #CIBW_MANYLINUX_X86_64_IMAGE: manylinux2010
+          #CIBW_MANYLINUX_I686_IMAGE: manylinux2010
+          CIBW_ARCHS: ${{ matrix.cibw_archs }}
 
+      - name: Build wheels for linux
+        if:   runner.os == 'Linux' && matrix.cibw_archs == 'aarch64'
+        uses: pypa/cibuildwheel@v2.2.2
+        env:
+          CIBW_BUILD: cp36-* cp37-* cp38-* cp39-* cp310-*
+          CIBW_BEFORE_BUILD: pip install cython
+          #CIBW_MANYLINUX_X86_64_IMAGE: manylinux2010
+          #CIBW_MANYLINUX_I686_IMAGE: manylinux2010
+          CIBW_ARCHS: ${{ matrix.cibw_archs }}
+          
       - name: Build wheels for macos
         if:   runner.os != 'Linux'
         uses: pypa/cibuildwheel@v2.2.2
         env:
           CIBW_BUILD: cp36-* cp37-* cp38-* cp39-* cp310-*
           CIBW_BEFORE_BUILD: pip install cython
-          # CIBW_ARCHS: ${{ matrix.cibw_archs }}
+          CIBW_ARCHS: ${{ matrix.cibw_archs }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
