--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,10 +17,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-10.15]  # windows-2019,
-        cibw_archs: ["auto"]
+        cibw_archs: "auto"
         include:
           - os: ubuntu-latest
-            cibw_archs: ["auto", "aarch64"]
+            cibw_archs: "aarch64"
 
     steps:
       - name: Checkout pysam
