--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,9 +18,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-10.15]  # windows-2019,
         cibw_archs: ["auto"]
-        include:
-          - os: ubuntu-latest
-            cibw_archs: "aarch64"
+        # include:
+        #   - os: ubuntu-latest
+        #     cibw_archs: "aarch64"
 
     steps:
       - name: Checkout pysam
@@ -43,8 +43,6 @@ jobs:
           CIBW_BUILD: cp36-* cp37-* cp38-* cp39-* cp310-*
           CIBW_SKIP: "*musllinux*"
           CIBW_BEFORE_BUILD: yum install -y libcurl-devel zlib-devel bzip2-devel xz-devel && pip install cython
-          # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2010
-          # CIBW_MANYLINUX_I686_IMAGE: manylinux2010
           CIBW_ARCHS: ${{ matrix.cibw_archs }}
 
       - name: Build wheels for macos
