--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: python -m pip install flake8
       - name: Run flake8
-        run: flake8 pysam/ tests/
+        run: flake8 pysam/ tests/ *.py
 
   direct:
     runs-on: ${{ matrix.os }}-latest
