--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ testpaths = pysam tests
 [flake8]
 max-line-length = 100
 max-complexity = 23
-extend-ignore = E117, E124, E125, E201, E202, E211, E225, E231, E265, E266, E302, E303, E305, E402, E501, E713, E722, E741, F403, F405, F811, F821, F841, W291, W293, W391, W605
+extend-ignore = E117, E124, E125, E201, E202, E211, E225, E231, E265, E266, E302, E303, E305, E402, E501, E701, E713, E722, E741, F403, F405, F811, F821, F841, W291, W293, W391, W605
 per-file-ignores = __init__.py:F401
 
 # E117 over-indented
@@ -28,6 +28,7 @@ per-file-ignores = __init__.py:F401
 # E305 expected 2 blank lines after class or function definition, found 1
 # E402 module level import not at top of file
 # E501 line too long
+# E701 multiple statements on one line (colon)
 # E713 test for membership should be 'not in'
 # E722 do not use bare 'except'
 # E741 ambiguous variable name '...'
