--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,22 +19,22 @@ jobs:
         os: [ubuntu-latest, macos-10.15]  # windows-2019,
         cibw_archs: [auto]
         cibw_build: ['cp36-* cp37-* cp38-* cp39-* cp310-*']
-        include:
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp36-*
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp37-*
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp38-*
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp39-*
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp310-*
+        # include:
+        #    - os: ubuntu-latest
+        #      cibw_archs: aarch64
+        #      cibw_build: cp36-*
+        #    - os: ubuntu-latest
+        #      cibw_archs: aarch64
+        #      cibw_build: cp37-*
+        #    - os: ubuntu-latest
+        #      cibw_archs: aarch64
+        #      cibw_build: cp38-*
+        #    - os: ubuntu-latest
+        #      cibw_archs: aarch64
+        #      cibw_build: cp39-*
+        #    - os: ubuntu-latest
+        #      cibw_archs: aarch64
+        #      cibw_build: cp310-*
 
     steps:
       - name: Checkout pysam
@@ -63,7 +63,7 @@ jobs:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
           CIBW_MANYLINUX_I686_IMAGE: manylinux_2_24
           CIBW_MANYLINUX_AARCH64_IMAGE: manylinux_2_24
-          CIBW_BEFORE_BUILD: apt-get install -y libcurl4-openssl-dev zlib1g-dev libbz2-dev liblzma-dev && pip install cython
+          CIBW_BEFORE_BUILD: apt-get install -y libcurl-dev zlib1g-dev bz2-dev lzma-dev && pip install cython
           CIBW_ARCHS: ${{ matrix.cibw_archs }}
 
       - name: Build wheels for macos
