try manylinux_2_24 build, 4

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -63,7 +63,7 @@ jobs:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
           CIBW_MANYLINUX_I686_IMAGE: manylinux_2_24
           CIBW_MANYLINUX_AARCH64_IMAGE: manylinux_2_24
-          CIBW_BEFORE_BUILD: apt-get install -y libcurl-dev zlib1g-dev bz2-dev lzma-dev && pip install cython
+          CIBW_BEFORE_BUILD: apt-get install -y libcurl4-openssl-dev zlib1g-dev bz2-dev lzma-dev && pip install cython
           CIBW_ARCHS: ${{ matrix.cibw_archs }}
 
       - name: Build wheels for macos
