--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,22 +19,22 @@ jobs:
         os: [ubuntu-latest, macos-10.15]  # windows-2019,
         cibw_archs: [auto]
         cibw_build: ['cp36-* cp37-* cp38-* cp39-* cp310-*']
-        # include:
-        #    - os: ubuntu-latest
-        #      cibw_archs: aarch64
-        #      cibw_build: cp36-*
-        #    - os: ubuntu-latest
-        #      cibw_archs: aarch64
-        #      cibw_build: cp37-*
-        #    - os: ubuntu-latest
-        #      cibw_archs: aarch64
-        #      cibw_build: cp38-*
-        #    - os: ubuntu-latest
-        #      cibw_archs: aarch64
-        #      cibw_build: cp39-*
-        #    - os: ubuntu-latest
-        #      cibw_archs: aarch64
-        #      cibw_build: cp310-*
+        include:
+           - os: ubuntu-latest
+             cibw_archs: aarch64
+             cibw_build: cp36-*
+           - os: ubuntu-latest
+             cibw_archs: aarch64
+             cibw_build: cp37-*
+           - os: ubuntu-latest
+             cibw_archs: aarch64
+             cibw_build: cp38-*
+           - os: ubuntu-latest
+             cibw_archs: aarch64
+             cibw_build: cp39-*
+           - os: ubuntu-latest
+             cibw_archs: aarch64
+             cibw_build: cp310-*
 
     steps:
       - name: Checkout pysam
