Build libhts.a via HTSlib's Makefile instead of as Python ext
Several HTSlib translation units require bespoke SIMD compiler flags,
and it is difficult to arrange this when running the compiler via
Python's extension building mechanisms.

Instead use HTSlib's Makefile to build libhts.a, and have the Python
extension modules link against this instead of compiling the C source
files themselves. (For the usual HTSLIB_MODE=shared, actually link with
all the LIBHTS_OBJS object files rather than the final libhts.a, thus
ensuring all object files are pulled in -- in particular including those
used by other extension modules but not libchtslib or htslib itself.)

Reorder include_dirs so that pysam/version.h is picked up first.
Clean libhts.a and *.o in the htslib/ subdirectory.
Ignore *.o, libhts.a, and htslib/version.h.
(These latter could be avoided by configuring and building HTSlib
in a separate build directory under build_temp instead, but that
would require more refactoring of setup.py.)

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ htslib/config_vars.h
 htslib/htscodecs.mk
 htslib/htslib.pc.tmp
 htslib/htslib-uninstalled.pc
+htslib/version.h
 pysam/config.py
 
 # linking tests
@@ -41,6 +42,8 @@ __pycache__/
 *.py[cod]
 
 # C extensions
+lib*.a
+*.o
 *.so
 
 # Distribution / packaging
