--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, macos]
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
         exclude:
           # Run only the latest 3.x on macOS
           - os: macos
@@ -19,8 +19,6 @@ jobs:
             python-version: 3.8
           - os: macos
             python-version: 3.9
-          - os: macos
-            python-version: 3.10
 
     steps:
       - name: Checkout pysam
