--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-10.15]  # windows-2019,
         cibw_archs: [auto]
-        cibw_build: ['cp36-* cp37-* cp38-* cp39-* cp310-*']
+        cibw_build: ['cp37-* cp38-* cp39-* cp310-*']
         include:
            - os: ubuntu-latest
              cibw_archs: aarch64
