Prevent miscellaneous warnings
Declare several more entries in pyproject.toml to avoid "The following
seems to be defined outside of `pyproject.toml`" messages.

Avoid `return` in test case to prevent "It is deprecated to return a value
that is not None from a test case" message.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,17 @@
 [project]
 name = "pysam"
 description = "pysam - a python module for reading, manipulating and writing genomic data sets."
+license = { text = "MIT License" }
 version = "0.20.0"
 authors = [
  { name = "Andreas Heger", email = "andreas.heger@gmail.com"}
 ]
 requires-python = ">=3.8"
+
+dynamic = [
+    "classifiers",
+    "readme",
+]
 
 dependencies = [
     "cython",
