--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, macos]
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         exclude:
           # Run only the latest 3.x on macOS
           - os: macos
@@ -18,7 +18,7 @@ jobs:
           - os: macos
             python-version: 3.9
           - os: macos
-            python-version: 3.10
+            python-version: 3.11
 
     steps:
       - name: Checkout pysam
