--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -139,7 +139,7 @@ jobs:
         # publish to pypi either on release event or if push on branch
         # with prefix publish-v. The latter is useful if there was a
         # hiccup during a release event.
-        if: (github.event_name == 'release' && github.event.action == 'published') || (github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/publish-v')
+        if: (github.event_name == 'release' && github.event.action == 'published') || (github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/publish-v'))
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
