Emulate samtools et al if these tools are not available
Add devtools/emulate-tools.py script that, when invoked as samtools,
bcftools, bgzip, or tabix, emulates that tool's behaviour by using
pysam's facilities. The script implements all functionality used in
the test suite (and in particular when creating test data in
tests/*_data/Makefile).

devtools/install-prerequisites.sh installs symlinks to this script
on platforms where samtools/bcftools/tabix packages are not available.

Add a new "don't disturb stdout" redirection mode to _pysam_dispatch(),
for use by the script. For now this is invoked via catch_stdout=None,
but we won't document this facility until it has bedded in.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ requires = ["setuptools>=59.0", "Cython>=0.29.12,<4"]
 build-backend = "setuptools.build_meta:__legacy__"
 
 [tool.cibuildwheel]
-before-all = "{project}/devtools/install-prerequisites.sh"
+before-all = "{project}/devtools/install-prerequisites.sh {project}/devtools/emulate-tools.py /usr/local/bin"
 # Necessary until we build libhts.a out-of-tree from within build_temp
 before-build = "make -C {project}/htslib distclean"
 
