Refactor pysam wheel building
Redesign job matrix to build x86+ARM macOS wheels in one job, and
i686+x86_64+ARM Linux wheels in principle in one job -- but subdivide
by Python version because each emulated ARM build takes 1.5 hours.
(Whereas ARM macOS builds are fast because they are cross-compiled.)

No need to set up Python or prerequisites outside cibuildwheel.
Use a separate script to install prerequisites regardless of the
package manager in use. Use CIBW_* variables carefully so that the
same job step handles both Linux and macOS.

Update cibuildwheel, and ensure we build a complete set of wheels
from cp36 to the upcoming cp312.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,12 @@ dynamic = [
 requires = ["setuptools>=59.0", "Cython>=0.29.12,<4"]
 build-backend = "setuptools.build_meta:__legacy__"
 
+[tool.cibuildwheel]
+before-all = "{project}/devtools/install-prerequisites.sh"
+
+test-requires = ["pytest"]
+test-command = "REF_PATH=: pytest {project}/tests"
+
 [tool.tox]
 legacy_tox_ini = """
     [tox]
