--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,69 +12,41 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.os }} for ${{ matrix.cibw_archs }}
-    runs-on: ${{ matrix.os }}
+    name: Build wheels on ${{ matrix.os }} for ${{ matrix.build }}
+    runs-on: ${{ matrix.os }}-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-10.15]  # windows-2019,
-        cibw_archs: [auto]
-        cibw_build: ['cp37-* cp38-* cp39-* cp310-* cp311-*']
+        os: [ubuntu]
+        build: ["cp36-* cp37-*", "cp38-* cp39-*", "cp310-* cp311-*", "cp312-*"]
+
         include:
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp36-*
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp37-*
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp38-*
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp39-*
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp310-*
-           - os: ubuntu-latest
-             cibw_archs: aarch64
-             cibw_build: cp311-*
+          - os: macos
+            build: "cp36-* cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"
+
     steps:
       - name: Checkout pysam
         uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.8'
-
       - name: Set up QEMU
-        if: ${{ matrix.cibw_archs == 'aarch64' }}
-        uses: docker/setup-qemu-action@v1
-
-      - name: Install prerequisite Python libraries
-        run:  |
-          python -m pip install --upgrade pip
-          pip install cython pytest pytest-pep8
-
-      - name: Build wheels for linux
         if:   runner.os == 'Linux'
-        uses: pypa/cibuildwheel@v2.12.1
-        env:
-          CIBW_BUILD: ${{ matrix.cibw_build }}
-          CIBW_SKIP: "*musllinux*"
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
-          CIBW_MANYLINUX_I686_IMAGE: manylinux_2_24
-          CIBW_MANYLINUX_AARCH64_IMAGE: manylinux_2_24
-          CIBW_BEFORE_BUILD: apt-get update && apt-get install -y libcurl4-openssl-dev zlib1g-dev libbz2-dev liblzma-dev && pip install cython
-          CIBW_ARCHS: ${{ matrix.cibw_archs }}
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: arm64
 
-      - name: Build wheels for macos
-        if:   runner.os != 'Linux'
-        uses: pypa/cibuildwheel@v2.4.0
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.15.0
         env:
-          CIBW_BUILD: ${{ matrix.cibw_build }}
-          CIBW_BEFORE_BUILD: pip install cython
-          CIBW_ARCHS: ${{ matrix.cibw_archs }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_SKIP: "*musllinux*"
+
+          CIBW_ARCHS_LINUX: auto aarch64
+          CIBW_ARCHS_MACOS: x86_64 arm64
+
+          CIBW_MANYLINUX_X86_64_IMAGE:  manylinux_2_28
+          CIBW_MANYLINUX_I686_IMAGE:    manylinux2014
+          CIBW_MANYLINUX_AARCH64_IMAGE: manylinux_2_28
+
+          CIBW_TEST_SKIP: "*-*linux_i686 *-*linux_aarch64 *-macosx_arm64"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
