Move tox settings to pyproject.toml & remove .python-version
Collect settings in pyproject.toml instead of bespoke files. (Eventually
we may render setup.cfg unnecessary too.) Fix list syntax and set REF_PATH
environment variable to speed up running pytest by avoiding network CRAM
reference requests.

Remove .python-version, which was probably inadvertently added. Ignore it
and tidy up ignoring Sphinx output.

--- a/.gitignore
+++ b/.gitignore
@@ -62,13 +62,13 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-doc/_build
 
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+.python-version
 .tox/
 .coverage
 .cache
@@ -91,4 +91,4 @@ coverage.xml
 *.pot
 
 # Sphinx documentation
-docs/_build/
+doc/_build/
