--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,10 +18,15 @@ jobs:
       matrix:
         os: [ubuntu]
         build: ["cp36-* cp37-*", "cp38-* cp39-*", "cp310-* cp311-*", "cp312-*"]
+        x64image: [manylinux_2_28]
 
         include:
           - os: macos
             build: "cp36-* cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"
+
+          - os: ubuntu
+            build: "cp38-manylinux_x86_64"
+            x64image: manylinux2014
 
     steps:
       - name: Checkout pysam
@@ -42,7 +47,7 @@ jobs:
           CIBW_ARCHS_LINUX: auto aarch64
           CIBW_ARCHS_MACOS: x86_64 arm64
 
-          CIBW_MANYLINUX_X86_64_IMAGE:  manylinux_2_28
+          CIBW_MANYLINUX_X86_64_IMAGE:  ${{ matrix.x64image }}
           CIBW_MANYLINUX_I686_IMAGE:    manylinux2014
           CIBW_MANYLINUX_AARCH64_IMAGE: manylinux_2_28
 
