Update package description metadata
Wordsmith the long description, add CRAM to the list of formats,
move the URLs to project.urls so they appear in the PyPI sidebar,
and specify the content type (to avoid twine warnings).

Wordsmith the (short) description and ensure it is the same in setup()
and pyproject.toml. Make pyproject.toml's version entry dynamic instead
of duplicating the canonical value in pysam/version.py.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,7 @@
 [project]
 name = "pysam"
-description = "pysam - a python module for reading, manipulating and writing genomic data sets."
+description = "Package for reading, manipulating, and writing genomic data"
 license = { text = "MIT License" }
-version = "0.21.0"
 authors = [
  { name = "Andreas Heger", email = "andreas.heger@gmail.com"}
 ]
@@ -11,7 +10,12 @@ requires-python = ">=3.6"
 dynamic = [
     "classifiers",
     "readme",
+    "version",
 ]
+
+[project.urls]
+"Documentation" = "https://pysam.readthedocs.io/en/stable/"
+"Release notes" = "https://pysam.readthedocs.io/en/stable/release.html"
 
 [build-system]
 requires = ["setuptools>=59.0", "Cython>=0.29.12,<4"]
